--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <!-- HEADER -->
 
   <header>
-    <div class="logo">
+    <div>
       <img src="resources/IMAGES/img-tea-cozy-logo.png" alt="logo">
     </div>
     <nav>
@@ -19,6 +19,13 @@
       <span><a href="#">Locations</a></span>
     </nav>
   </header>
+
+<!-- BODY -->
+
+    <div class="container1">
+      <img src="resources/IMAGES/img-mission-background.jpg" alt="tea">
+
+    </div>
 
   </body>
 </html>
