--- a/index.html
+++ b/index.html
@@ -22,10 +22,18 @@
 
 <!-- BODY -->
 
-    <div class="container1">
-      <img src="resources/IMAGES/img-mission-background.jpg" alt="tea">
 
+    <div class="container1">
+      <div class="heroimage">
+        <img src="resources/IMAGES/img-mission-background.jpg" alt="tea">
+      </div>
+      <div id="titlebar">
+          <h2>Our Mission</h2>
+          <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic tea
+          </h4>
+      </div>
     </div>
+
 
   </body>
 </html>
