--- a/index.html
+++ b/index.html
@@ -22,17 +22,30 @@
 
 <!-- BODY -->
 
-
-    <div class="container1">
-      <div class="heroimage">
-        <img src="resources/IMAGES/img-mission-background.jpg" alt="tea">
-      </div>
-      <div id="titlebar">
-          <h2>Our Mission</h2>
-          <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic tea
-          </h4>
-      </div>
+  <div class="mastercontainer">
+      <div>
+        <div class="heroimage">
+          <div id="titlebar">
+            <h2>Our Mission</h2>
+            <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic tea
+            </h4>
+          </div>
+        </div>
     </div>
+    <div>
+        <div class="Teaofmonth">
+          <h2>Tea of the Month</h2>
+          <h4>What's steeping at TeaCozy?</h4>
+        </div>
+    </div>
+    <div>
+      <img src="resources/IMAGES/img-tea-cozy-logo.png" alt="logo">
+    </div>
+    <nav>
+
+  </div>
+
+
 
 
   </body>
