--- a/index.html
+++ b/index.html
@@ -38,10 +38,9 @@
           <h4>What's steeping at TeaCozy?</h4>
         </div>
     </div>
-    <div>
-      <img src="resources/IMAGES/img-tea-cozy-logo.png" alt="logo">
-    </div>
-    <nav>
+    <div class="heroimage">
+    </div>  
+
 
   </div>
 
