--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <div class="mastercontainer">
       <div>
         <div class="heroimage">
-          <div id="titlebar">
+          <div id="missionbar">
             <h2>Our Mission</h2>
             <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic tea
             </h4>
@@ -33,16 +33,69 @@
         </div>
     </div>
     <div>
-        <div class="Teaofmonth">
-          <h2>Tea of the Month</h2>
-          <h4>What's steeping at TeaCozy?</h4>
+      <div class="Teaofmonth">
+              <h2>Teas of the Month</h2>
+              <h4>What's steeping at TeaCozy?</h4>
+        <div class="Teacontainer">
+          <div id="Teas1">
+            <img src="resources/IMAGES/img-berryblitz.jpg">
+            <h4> Fall Berry Blitz </h4>
+          </div>
+          <div id="Teas1">
+            <img src="resources/IMAGES/img-spiced-rum.jpg">
+            <h4> Spiced Rum Tea</h4>
+          </div>
+          <div id="Teas1">
+            <img src="resources/IMAGES/img-donut.jpg">
+            <h4> Seasonal Donuts </h4>
+          </div>
+          <div id="Teas1">
+            <img src="resources/IMAGES/img-myrtle-ave.jpg">
+            <h4> Myrtle Ave Tea </h4>
+          </div>
+           <div id="Teas1">
+            <img src="resources/IMAGES/img-bedford-bizarre.jpg">
+            <h4> Bedford Bizarre Tea </h4>
+          </div>
         </div>
+      </div>
     </div>
-    <div class="heroimage">
-    </div>  
+    <div>
+    <div class="locationcontainer">
+          <div class="locationbox">
+            <h3>Downtown</h3>
+            384 West 4th St<br><br>
+            Suite 108<br><br>
+            Portland, Maine<br><br>
+          </div>
+          <div class="locationbox">
+            <h3>Downtown</h3>
+            384 West 4th St<br><br>
+            Suite 108<br><br>
+            Portland, Maine<br><br>
+          </div>
+          <div class="locationbox">
+            <h3>Downtown</h3>
+            384 West 4th St<br><br>
+            Suite 108<br><br>
+            Portland, Maine<br><br>
+          </div>
 
-
+    </div>
+        <div class="contact">
+          <h2>The Tea Cozy</h2>
+          <h5>contact@theteacozy.com</h5>
+          <h5>917-555-8904</h5>
+       </div>
+    </div>
   </div>
+
+
+
+
+
+
+  <p> Copyright Tea Cozy 2017 </p>
 
 
 
